k8s/logs-spack-io/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-spack-io
  namespace: logs-spack-io
  labels:
    app: logs-spack-io
    svc: web
    environment: matomo

spec:
  selector:
    matchLabels:
      app: logs-spack-io
      svc: web
      environment: matomo
  replicas: 2
  template:
    metadata:
      labels:
        app: logs-spack-io
        svc: web
        environment: matomo
    spec:
      containers:
      - name: matomo-nginx
        imagePullPolicy: Always
        image: "nginx:alpine"
        command: ["nginx", "-g", "daemon off;", "-c", "/config/nginx.conf"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Gi
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        volumeMounts:
          - mountPath: /config/nginx.conf
            name: config
            subPath: nginx.conf
          - mountPath: /var/www/html
            name: html-files
      - name: matomo
        image: matomo:3.14.1-fpm-alpine
        resources:
          requests:
            cpu: 1000m
            memory: 8Gi
          limits:
            cpu: 1000m
            memory: 8Gi
        ports:
        - name: http
          containerPort: 9000
        volumeMounts:
        - mountPath: /usr/local/etc/php/conf.d/php-special.ini
          name: config
          subPath: php.ini
        - mountPath: /var/www/html
          name: html-files
        - mountPath: /data
          name: migration-logs
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql

        # Important - this is recommended to be 500GB SSD - can we do that?
        volumeMounts:
        - name: matomo-db
          mountPath: /var/lib/mysql
        - name: matomo-configmap
          mountPath: /etc/mysql/conf.d/more.cnf
          subPath: more.cnf
        livenessProbe: 
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 30
          failureThreshold: 5
          tcpSocket:
            port: mysql
        readinessProbe: 
          initialDelaySeconds: 20
          timeoutSeconds: 10
          periodSeconds: 30
          failureThreshold: 5
          tcpSocket:
            port: mysql
        resources:
          limits:
            cpu: "3.0"
            memory: "3Gi"
          requests:
            cpu: "0.25"
            memory: "250Mi"
      volumes:
      - name: config
        configMap:
          name: matomo-config

      # TODO how do we update this for a filesystem?
      - name: html-files
        cephfs:
          monitors:
          - 192.168.0.1
          path: /matomo
          user: admin
          secretRef:
            name: logs-spack-io-secrets
            key: logs-spack-io-secrets
          readOnly: false
      nodeSelector:
        "beta.kubernetes.io/instance-type": "t2.2xlarge"
