k8s/logs-spack-io/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: logs-spack-io
  namespace: logs-spack-io
  labels:
    app: logs-spack-io
    svc: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: logs-spack-io
    svc: web
